--- a/src/input.css
+++ b/src/input.css
@@ -3,12 +3,18 @@
 @tailwind utilities;
 
 
-/* .header__wrapper{
+.text-huge{
+ font-size: x-large;
+}
 
-    background: rgba(0, 0, 0, 0.7);
-} */
+.line-height{
+    line-height: 2rem;
+}
 
 
+.font-italic {
+    font-style: italic;
+}
 
 
 .header__navigation{
@@ -17,6 +23,32 @@
 
 
 }
+
+
+.tns-nav {
+    text-align: center;
+}
+
+.tns-nav button {
+    height: 10px;
+    width: 100px;
+    background-color: white;
+    margin: 0 10px;
+
+    
+}
+
+
+.tns-nav .tns-nav-active {
+    background-color: black;
+}
+
+.tns-controls {
+    position: relative;
+}
+
+
+
 
 /* .nav{
 
@@ -33,18 +65,23 @@
 
 } */
 
+.border{
+    border-bottom: 2px solid white;
+}
 
 .gradientbottomDark {
     position: absolute;
     width: 100%;
     height: 10rem;
-    background-image: linear-gradient(transparent, #0d0b0b );
+    background-image: linear-gradient(transparent,black );
     bottom: 0;
-}
+  }
 
 
 .nav>ul li{
+
     line-height: 4rem;
+ 
 }
 
 
@@ -52,11 +89,14 @@
     font-size: 1.5rem;
 }
 
+
+
 .text-stroke {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #F1F1F1;
     -webkit-text-fill-color: transparent;
 }
+
 
 
 .listennow{
@@ -68,7 +108,10 @@
     background-color: #50A584;
     color: #F1F1F1;
     width: 30px; 
+
 }
+
+
 
 .v-align-top {
     vertical-align: top;
